--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "nodemailer": "^6.3.1",
     "path": "^0.12.7",
     "react": "^16.11.0",
