--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "font-awesome": "^4.7.0",
