--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
+    "emailjs": "^2.2.0",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "font-awesome": "^4.7.0",
