--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
+    "cors": "^2.8.5",
     "emailjs": "^2.2.0",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
-    "nodemailer": "^6.3.1",
+    "mongoose": "^5.7.13",
+    "nodemailer": "^6.4.0",
+    "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "react": "^16.11.0",
     "react-delay-link": "^1.1.4",
@@ -32,7 +36,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "mailing": "node mailing.js",
+    "fitness": "node fitness.js",
+    "dev": "run-p mailing fitness start"
   },
   "eslintConfig": {
     "extends": "react-app"
