--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chat",
-  "version": "0.1.0",
+  "name": "project",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
@@ -8,21 +8,12 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
-    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
-    "cors": "^2.8.5",
-    "emailjs": "^2.2.0",
-    "express": "^4.17.1",
-    "express-favicon": "^2.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
-    "mongoose": "^5.7.13",
-    "nodemailer": "^6.4.0",
-    "npm-run-all": "^4.1.5",
-    "path": "^0.12.7",
     "react": "^16.11.0",
     "react-delay-link": "^1.1.4",
     "react-dom": "^16.11.0",
@@ -36,10 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "mailing": "node mailing.js",
-    "fitness": "node fitness.js",
-    "dev": "run-p mailing fitness start"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
